# AI_Crypto_Trader

./: .env.example  .gitignore  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/migrations/: 003_phase3_tables.sql
backend/src/cryptoswarm/: main.py
backend/src/cryptoswarm/agents/: director.py  indicators.py  llm.py  ml_agent.py  portfolio.py  quant.py  reward_computer.py  risk_agent.py  sentiment.py
backend/src/cryptoswarm/api/: app.py  deps.py
backend/src/cryptoswarm/bus/: client.py  messages.py
backend/src/cryptoswarm/config/: settings.py
backend/src/cryptoswarm/feed/: handler.py  rest_client.py  ws_client.py
backend/src/cryptoswarm/learning/: prompt_evolution.py  prompt_store.py
backend/src/cryptoswarm/ml/: features.py  lstm_model.py  model_store.py  ppo_policy.py  reward.py  trainer.py  xgboost_model.py
backend/src/cryptoswarm/papertrade/: account.py  engine.py  math.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_agent_pipeline.py  test_signal_pipeline.py
backend/tests/unit/: test_agents.py  test_breakers.py  test_bus.py  test_config.py  test_decisions.py  test_director.py  test_features.py  test_guards.py  test_indicators.py  test_llm.py  test_lstm_model.py  test_math.py  test_messages.py  test_messages_phase3.py  test_ml_agent.py  test_ml_trainer.py  test_papertrade.py  test_postgres_phase3.py  test_ppo_policy.py  test_prompt_evolution.py  test_prompt_store.py  test_reward.py  test_scraper_scorer.py  test_scraper_writer.py  test_sentiment_phase3.py  test_xgboost_model.py
(+22 files in other folders)
